# consulting-pm

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: cd.yml  ci.yml
helm/consulting-pm/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
helm/consulting-pm/templates/: _helpers.tpl  ingress.yaml
helm/consulting-pm/templates/auth/: deployment.yaml  hpa.yaml  service.yaml
k8s/base/: kustomization.yaml  namespace.yaml
k8s/base/auth/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  service.yaml
k8s/base/billing/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  service.yaml
k8s/base/gateway/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  service.yaml
k8s/base/infra/: minio.yaml  redis.yaml  resource-quotas.yaml
k8s/base/ingress/: ingress.yaml
k8s/base/notifications/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  service.yaml
k8s/base/projects/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  service.yaml
k8s/base/resources/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  service.yaml
k8s/base/timelog/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
services/auth/: Dockerfile  alembic.ini  pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 0001_initial.py
services/auth/app/: config.py  database.py  dependencies.py  main.py
services/auth/app/models/: __init__.py  tenant.py  token.py  user.py
services/auth/app/repositories/: __init__.py  tenant_repo.py  token_repo.py  user_repo.py
services/auth/app/routers/: __init__.py  auth.py  roles.py  tenants.py  users.py
services/auth/app/schemas/: __init__.py  auth.py  role.py  tenant.py  user.py
services/auth/app/security/: __init__.py  password.py  totp.py
services/auth/app/services/: __init__.py  auth_service.py  tenant_service.py  user_service.py
services/auth/app/tests/: conftest.py  test_auth.py  test_tenants.py
services/billing/: Dockerfile  alembic.ini  pyproject.toml
services/billing/alembic/: env.py
services/billing/app/: config.py  database.py  dependencies.py  main.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: config.py  main.py  proxy.py  rate_limit.py
services/notifications/: Dockerfile  alembic.ini  pyproject.toml
services/notifications/alembic/: env.py
services/notifications/alembic/versions/: 0001_initial.py
services/notifications/app/: config.py  database.py  dependencies.py  main.py
services/notifications/app/models/: __init__.py  notification.py
services/notifications/app/routers/: __init__.py  notifications.py  preferences.py
services/notifications/app/schemas/: __init__.py  notification.py
services/projects/: Dockerfile  alembic.ini  pyproject.toml
services/projects/alembic/: env.py
services/projects/alembic/versions/: 0001_initial.py
services/projects/app/: config.py  database.py  dependencies.py  main.py  storage.py
services/projects/app/models/: __init__.py  project.py
services/projects/app/repositories/: __init__.py  project_repo.py
services/projects/app/routers/: __init__.py  attachments.py  clients.py  projects.py  tasks.py
services/projects/app/schemas/: __init__.py  project.py
services/resources/: Dockerfile  alembic.ini  pyproject.toml
services/resources/alembic/: env.py
services/resources/alembic/versions/: 0001_initial.py
services/resources/app/: config.py  dependencies.py  main.py
services/resources/app/models/: __init__.py  resource.py
services/resources/app/routers/: __init__.py  resources.py
services/resources/app/schemas/: __init__.py  resource.py
services/timelog/: Dockerfile  alembic.ini  pyproject.toml
services/timelog/alembic/: env.py
services/timelog/app/: config.py  database.py  dependencies.py  main.py
shared/: pyproject.toml
shared/core/cache/: __init__.py  redis.py
shared/core/exceptions/: __init__.py  base.py  handlers.py
shared/core/health/: __init__.py  factory.py
shared/core/middleware/: __init__.py  correlation.py  jwt_middleware.py  tenant.py
shared/core/models/: __init__.py  base.py
shared/core/schemas/: __init__.py  base.py  pagination.py
shared/core/security/: __init__.py  jwt.py
shared/events/: __init__.py  consumer.py  publisher.py
shared/events/schemas/: __init__.py  auth_events.py  base.py  billing_events.py  project_events.py  resource_events.py  timelog_events.py
(+34 files in other folders)
