[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consulting-pm-shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis[hiredis]>=5.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio[trio]>=4.0.0",
]

# Hatchling cannot auto-discover the package because the project name
# (consulting-pm-shared) doesn't match the directory name (shared).
# We explicitly list what to include and remap paths so the wheel installs
# files under shared/ (making `from shared.core...` imports work).
[tool.hatch.build.targets.wheel]
include = [
    "__init__.py",
    "core/**",
    "events/**",
]

[tool.hatch.build.targets.wheel.sources]
"" = "shared/"
